--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "vue-chat-scroll": "^1.4.0",
         "watch": "^0.13.0"
     }
 }
