--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "emoji-mart-vue": "^2.6.6",
         "vue-chat-scroll": "^1.4.0",
         "watch": "^0.13.0"
     }
